feat(hyper): Add concurrent execution tests and memory limit validation
- Implemented proper BorshSerialize/Deserialize for ExecutionInput
- Added concurrent execution tests to verify thread safety
- Added memory limit validation and testing
- Added test cases for concurrent memory limits and region health
- Fixed network error simulation in tests
- Updated dependencies in Cargo.toml

--- a/hyper/Cargo.toml
+++ b/hyper/Cargo.toml
@@ -5,5 +5,13 @@ edition = "2021"
 
 [dependencies]
 tee-interface = { path = "../interface" }
-async-trait = { workspace = true }
-tokio = { workspace = true }
+borsh = "0.10.3"
+tokio = { version = "1.0", features = ["full"] }
+async-trait = "0.1.74"
+rand = "0.8.5"
+futures = "0.3"
+thiserror = "1.0"
+
+[dev-dependencies]
+tokio-test = "0.4"
+tokio = { version = "1.0", features = ["full", "test-util"] }
