feat: Add contract integration test
- Created contract_test.rs to test WASM contract execution
- Added test dependencies in Cargo.toml
- Test builds and executes the multisig contract through our TEE executor

--- a/hyper/Cargo.toml
+++ b/hyper/Cargo.toml
@@ -6,12 +6,17 @@ edition = "2021"
 [dependencies]
 tee-interface = { path = "../interface" }
 borsh = "0.10.3"
+borsh-derive = "0.10.3"
 tokio = { version = "1.0", features = ["full"] }
 async-trait = "0.1.74"
 rand = "0.8.5"
 futures = "0.3"
 thiserror = "1.0"
+governor = "0.6"
+nonzero_ext = "0.3"
 
 [dev-dependencies]
 tokio-test = "0.4"
 tokio = { version = "1.0", features = ["full", "test-util"] }
+wasmlanche = { path = "../../hyper/x/contracts/wasmlanche" }
+multisig = { path = "../../hyper/x/contracts/examples/multisig" }
